[PreMigration][Features] ExecutionCourseManagement.  - New interface for CC Associations + EC Separation  - CreateExecutionCourses now prints number of ECs created per degree.